--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^3.5.1",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
